--- a/index-en.html
+++ b/index-en.html
@@ -44,7 +44,7 @@
                 <div class="CTA">
                     <button id="contact">Contact</button>
                     <button id="billeterie">Ticketing</button>
-                    <p><a href="index-fr.html">FR</a> <br><a href="index-en.html"> EN</a></p>
+                    <p><a href="index.html">FR</a> <br><a href="index-en.html"> EN</a></p>
                 </div>
             </nav>
         </div>
